# idklang

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  main.cpp  reader.c
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml  codeql.yml
example/: class.idk  example.idk  forloop.idk  func.idk  input.idk  math.idk  string.idk
idklang/: color.h  idklang.hpp  math.h  time.hpp
include/: argparser.hpp  reader.h  transpiler.hpp
src/: main.cpp  reader.c
src/include/: error.hpp  lexer.hpp  reader.h  transpiler.hpp
